bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__clone.snap
---
source: bloodhound/src/deserializer.rs
assertion_line: 1512
expression: to_json(&event)
---
{
  "args": {
    "flags": [
      "CLONE_VM",
      "CLONE_FS",
      "CLONE_FILES",
      "CLONE_SIGHAND",
      "CLONE_THREAD"
    ]
  },
  "event": {
    "layer": "behavior",
    "name": "clone",
    "type": "TRACEPOINT"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5678,
    "ppid": 1234,
    "sessionid": 42,
    "timestamp": 1709.0
  },
  "return_code": 9999
}
