bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__connect_ipv4.snap
---
source: bloodhound/src/deserializer.rs
assertion_line: 1475
expression: to_json(&event)
---
{
  "args": {
    "addr": "93.184.216.34",
    "family": 2,
    "port": 443
  },
  "event": {
    "layer": "behavior",
    "name": "connect",
    "type": "TRACEPOINT"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5678,
    "ppid": 1234,
    "sessionid": 42,
    "timestamp": 1709.0
  },
  "return_code": 0
}
