bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__execve.snap
---
source: bloodhound/src/deserializer.rs
assertion_line: 1407
expression: to_json(&event)
---
{
  "args": {
    "argv": [
      "ls",
      "-la",
      "/home"
    ],
    "filename": "/usr/bin/ls"
  },
  "event": {
    "layer": "tooling",
    "name": "execve",
    "type": "TRACEPOINT"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5678,
    "ppid": 1234,
    "sessionid": 42,
    "timestamp": 1709.0
  },
  "return_code": 0
}
