bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__lsm_ptrace.snap
---
source: bloodhound/src/deserializer.rs
assertion_line: 1618
expression: to_json(&event)
---
{
  "args": {
    "target_pid": 999
  },
  "event": {
    "layer": "behavior",
    "name": "ptrace_access_check",
    "type": "LSM"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5678,
    "ppid": 1234,
    "sessionid": 42,
    "timestamp": 1709.0
  },
  "return_code": -1
}
