bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__lsm_task_kill.snap
---
source: bloodhound/src/deserializer.rs
assertion_line: 1582
expression: to_json(&event)
---
{
  "args": {
    "signal": 9,
    "target_pid": 100
  },
  "event": {
    "layer": "behavior",
    "name": "task_kill",
    "type": "LSM"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5678,
    "ppid": 1234,
    "sessionid": 42,
    "timestamp": 1709.0
  },
  "return_code": -1
}
