bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__mkdir.snap
---
source: bloodhound/src/deserializer.rs
assertion_line: 1529
expression: to_json(&event)
---
{
  "args": {
    "filename": "/tmp/new_dir"
  },
  "event": {
    "layer": "behavior",
    "name": "mkdir",
    "type": "TRACEPOINT"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5678,
    "ppid": 1234,
    "sessionid": 42,
    "timestamp": 1709.0
  },
  "return_code": 0
}
